--- a/views/partials/header/header-block.handlebars
+++ b/views/partials/header/header-block.handlebars
@@ -2,7 +2,7 @@
 <header class="header-inner-box">
   <div class="header-banner">
     <div class="banner-text-box">
-      <p class="banner-text">Welcome</br><span class="member-name"></span></p>
+      <p class="banner-text">Welcome <span class="member-name"></span></p>
     </div>
     <img id="SBgif" src="../../images/SBWithJournal.gif">
   </div>
