--- a/views/partials/modal/modal-block.handlebars
+++ b/views/partials/modal/modal-block.handlebars
@@ -19,7 +19,7 @@
                         </svg>
                     </button>
                     <!-- Song search field -->
-                    <input type="text" class="mt-0 ml-1" id="song-name" placeholder="Search">
+                    <input type="text" class="mt-0 mb-1 ml-1" id="song-name" placeholder="Search">
                     <div class="link-box">
                         <a href="/members">SongBirdie</a>
                         <a href="/addSong">Add To Song Book</a>
