--- a/views/updateSong.handlebars
+++ b/views/updateSong.handlebars
@@ -15,26 +15,30 @@
     {{!-- Main body of the page --}}
     <main class="main-song">
         {{!-- Title --}}
-        <h1 class="song-name">Update Song</h1>
+        <h1 class="song-name">Update<br>Song</h1>
         {{!-- Text --}}
         <p class="song-text"></p>Update your song here and save it to your songbook.</p>
         {{!-- Form --}}
         <form class="update-song" data-id="{{dataValues.id}}">
             {{!-- Button --}}
-            <button class="edit-song" type="submit" value="Submit">Update Song</button>
+            <button class="edit-song" type="submit" value="Submit">Update</button>
             {{!-- Inputs --}}
-            <label class="input-labels" for="title">Title name:</label><br>
-            <input size="47.5" type="text" id="title" class="create-inputs" name="titlename" value="{{dataValues.title}}"><br>
-
-            <label for="artist">Artist name:</label><br>
-            <input size="47.5" type="text" id="artist" class="create-inputs" name="artistname" value="{{dataValues.artist}}"><br><br>
-
-            <label for="tempo">Tempo:</label><br>
-            <input size="47.5" type="text" id="tempo" class="create-inputs" name="temponame" value="{{dataValues.tempo}}"><br>
-
-            <label for="key">Key:</label><br>
-            <input size="47.5" type="text" id="key" class="create-inputs" name="keyname" value="{{dataValues.songkey}}"><br><br>
-
+            <div class="create-input-box">
+                <label class="input-labels" for="title">Title name:</label><br>
+                <input size="47.5" type="text" id="title" class="create-inputs" name="titlename" value="{{dataValues.title}}"><br>
+            </div>
+            <div class="create-input-box">
+                <label class="input-labels" for="artist">Artist name:</label><br>
+                <input size="47.5" type="text" id="artist" class="create-inputs" name="artistname" value="{{dataValues.artist}}"><br>
+            </div>
+            <div class="create-input-box">
+                <label class="input-labels" for="tempo">Tempo:</label><br>
+                <input size="47.5" type="text" id="tempo" class="create-inputs" name="temponame" value="{{dataValues.tempo}}"><br>
+            </div>
+            <div class="create-input-box">
+                <label class="input-labels" for="key">Key:</label><br>
+                <input size="47.5" type="text" id="key" class="create-inputs" name="keyname" value="{{dataValues.songkey}}"><br><br>
+            </div>
             <div class="chords-box">
                 <label for="chords"></label><br>
                 <textarea id="chords" class="create-chords" rows="6" cols="50" name="chordsname">{{dataValues.chords}}</textarea><br><br>
