Styled the page for responsive screens and ipad pro.

--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -18,7 +18,9 @@
         {{!-- Form --}}
         <form class="create-song">
             {{!-- Button --}}
-            <button class="add-song" type="submit" value="Submit">Add Song</button>
+            <div class="button-box">
+                <button class="buttons" type="submit" value="Submit">Add Song</button>
+            </div>    
                 {{!-- Inputs --}}
             <div class="create-input-box">
                 <label class="input-labels" for="title">Title name:</label><br><br>
