--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,7 +16,7 @@
           </div>
           {{!-- Button/Link --}}
           <div class="btn-box">
-            <button type="submit" class="button animate__animated animate__bounceIn">Login</button>
+            <button type="submit" class="landing-buttons animate__animated animate__bounceIn">Login</button>
             <p class="text-blue btn-link">Sign up <a class="text-blue" href="/">here</a></p>
           </div>
         </div>
