--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,7 +21,7 @@
         </div>
         {{!-- Button/Link --}}
         <div class="btn-box">
-          <button type="submit" class="button animate__animated animate__bounceIn">Sign Up</button>
+          <button type="submit" class="landing-buttons animate__animated animate__bounceIn">Sign Up</button>
           <p class="text-blue btn-link">Login <a class="text-blue" href="/login">here</a></p>
         </div>
       </div>
