--- a/views/updateSong.handlebars
+++ b/views/updateSong.handlebars
@@ -21,7 +21,9 @@
         {{!-- Form --}}
         <form class="update-song" data-id="{{dataValues.id}}">
             {{!-- Button --}}
-            <button class="edit-song" type="submit" value="Submit">Update</button>
+            <div class="button-box">
+                <button class="buttons" type="submit" value="Submit">Update</button>
+            </div>
             {{!-- Inputs --}}
             <div class="create-input-box">
                 <label class="input-labels" for="title">Title name:</label><br>
