--- a/views/updateSong.handlebars
+++ b/views/updateSong.handlebars
@@ -24,12 +24,27 @@
             <button class="edit-song" type="submit" value="Submit">Update Song</button>
             {{!-- Inputs --}}
             <label class="input-labels" for="title">Title name:</label><br>
+            {{!-- Alert Msg --}}
+            <div style="display: none" id="alert-title" class="alert alert-danger" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class="sr-only">Error:</span> <span class="msg"></span>
+            </div>
             <input size="47.5" type="text" id="title" class="create-inputs" name="titlename" value="{{dataValues.title}}"><br>
 
             <label for="artist">Artist name:</label><br>
+            {{!-- Alert Msg --}}
+            <div style="display: none" id="alert-artist" class="alert alert-danger" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class="sr-only">Error:</span> <span class="msg"></span>
+            </div>
             <input size="47.5" type="text" id="artist" class="create-inputs" name="artistname" value="{{dataValues.artist}}"><br><br>
 
             <label for="tempo">Tempo:</label><br>
+            {{!-- Alert Msg --}}
+            <div style="display: none" id="alert-tempo" class="alert alert-danger" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class="sr-only">Error:</span> <span class="msg"></span>
+            </div>
             <input size="47.5" type="text" id="tempo" class="create-inputs" name="temponame" value="{{dataValues.tempo}}"><br>
 
             <label for="key">Key:</label><br>
