--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -24,16 +24,31 @@
                 {{!-- Inputs --}}
             <div class="create-input-box">
                 <label class="input-labels" for="title">Title name:</label><br><br>
+                {{!-- Alert Msg --}}
+                <div style="display: none" id="alert-title" class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span> <span class="msg"></span>
+                </div>
                 <input type="text" id="title" class="create-inputs" name="titlename"
                     placeholder="Example: Catch Hell Blues"><br>
             </div>
             <div class="create-input-box">
                 <label class="input-labels" for="artist">Artist name:</label><br>
+                {{!-- Alert Msg --}}
+                <div style="display: none" id="alert-artist" class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span> <span class="msg"></span>
+                </div>
                 <input type="text" id="artist" class="create-inputs" name="artistname"
                     placeholder="Example: The White Stripes"><br><br>
             </div>
             <div class="create-input-box">
                 <label class="input-labels" for="tempo">Tempo:</label><br>
+                {{!-- Alert Msg --}}
+                <div style="display: none" id="alert-tempo" class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span> <span class="msg"></span>
+                </div>
                 <input type="text" id="tempo" class="create-inputs" name="temponame"
                     placeholder="(BPM between 60 and 200) Example: 96"><br>
             </div>
