Removed search bar from all pages except members page.

--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -4,7 +4,7 @@
     {{!-- Header box --}}
     <div class="header-box">
         {{!-- Modal block --}}
-        {{>modal/modal-block}}
+        {{>modal/nosearchmodal-block}}
         {{!-- Header block --}}
         {{>header/header-block}}
     </div>
