--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -5,7 +5,7 @@
   <div class="header-box">
     <div class="modal-box">
       {{!-- Modal block --}}
-      {{>modal/modal-block}}
+      {{>modal/nosearchmodal-block}}
       {{>delete/delete-block}}
     </div>
     {{>header/header-block}}
