--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color:rgb(41, 40, 40);
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .text-white {
