Added the tinymce rich text editor plugin. Styled the login and sign up pages to be centered and responsive.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color:rgb(41, 40, 40);
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .text-white {
@@ -19,16 +20,16 @@ body {
 
 /* ------------------- Sign up and Login content ------------------- */
 
-/* hero_box */
+/* Hero_box */
 .hero_box {
-  max-width: 800px;
-  height: 90vh;
+  max-width: 1024px;
+  height: 100vh;
   display: flex;
-  margin-top: 3rem;
 }
 
+/* Hero songbirdie logo */
 .hero_logo {
-  max-width: 800px;
+  max-width: 1024px;
   width: 100vw;
   background-image: url(../images/SBsmTxtWithJournal10sec.gif);
   background-position: center;
@@ -39,6 +40,7 @@ body {
 
 /* Sign up */
 .signup, .login {
+  max-width: 1024px;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -50,7 +52,7 @@ body {
 .fields {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   padding-top: 4rem;
   padding-right: 7rem;
 }
@@ -148,7 +150,7 @@ body {
 
 /* Modal inner box */
 .modal-inner-box {
-  max-width: 800px;
+  max-width: 1024px;
   width: 100%;
   margin: auto;
 }
@@ -162,7 +164,7 @@ body {
 
 /* modal close button x */
 .modal-close {
-  max-width: 800px;
+  max-width: 1024px;
   color: rgb(98, 3, 187) !important;
   font-size: 2.5rem;
   position: absolute;
@@ -216,7 +218,7 @@ body {
 
 /* Full page styling */
 .full-page {
-  max-width: 800px;
+  max-width: 1024px;
   width: 100vw;
   background-color: rgb(173, 226, 250);
   background-image: url(../images/h-paper-stock-white.jpg);
@@ -372,12 +374,6 @@ song title/artist on members page */
   padding-right: 2rem;
 }
 
-/* Lyrics box */
-.lyrics-box {
-  display: flex;
-  justify-content: center;
-}
-
 /* Lyrics */
 .lyrics {
   width: 100%;
@@ -450,8 +446,7 @@ song title/artist on members page */
 
    /* hero_box */
    .hero_box {
-    height: 90vh;
-    margin-top: 3rem;
+    height: 100vh;
   }
 
     /* Sign up and login fields */
@@ -478,6 +473,10 @@ song title/artist on members page */
     margin-top: -10rem;
   }
 
+  .song-name {
+    font-size: 3rem;
+  }
+
 }
 
 /* -------------------- media queries 375 -------------------- */
@@ -487,8 +486,7 @@ song title/artist on members page */
 
   /* hero_box */
   .hero_box {
-    height: 80vh;
-    margin-top: 7rem;
+    height: 80%;
   }
 
   /* Sign up and login fields */
@@ -527,8 +525,8 @@ song title/artist on members page */
 
   /* hero_box */
   .hero_box {
-    height: 80vh;
-    margin-top: 8rem;
+    height: 90vh;
+    margin-top: 0rem;
   }
 
     /* Sign up and login fields */
@@ -565,14 +563,9 @@ song title/artist on members page */
     height: 100vh;
   }
 
-  /* Signup and login form */
-  .signup, .login {
-    margin-top: 8rem;
-  }
-
   /* Input fields */
   .fields {
-    padding-left: 10rem;
+    padding-top: 10rem;
   }
 
   /* Input fields */
@@ -661,6 +654,7 @@ song title/artist on members page */
     color: rgba(41, 41, 41, 0.842);
     line-height: 3rem;
     margin-left: 7.5rem;
+    font-size: 5rem;
   }
 
   /* Create song text <p> */
@@ -684,7 +678,7 @@ song title/artist on members page */
 
   /* Creates song inpupt fields */
   .create-inputs {
-    max-width: 800px;
+    max-width: 1024px;
     width: 80%;
     margin-left: 7.5rem;
   }
@@ -700,7 +694,7 @@ song title/artist on members page */
 
   /* Create song chords */
   .create-chords {
-    max-width: 800px;
+    max-width: 1024px;
     width: 80%;
     color: black;
     font-size: 1.5rem;
@@ -712,14 +706,12 @@ song title/artist on members page */
   .lyrics-box {
     max-width: 100vw;
     width: 100%;
-    display: flex;
-    justify-content: center;
     padding: 1rem;
   }
 
   /* Create song lyrics */
   .create-lyrics {
-    max-width: 800px;
+    max-width: 1024px;
     width: 80%;
     color: black;
     font-size: 1.5rem;
@@ -737,18 +729,18 @@ song title/artist on members page */
     margin: 0 auto;
   }
 
-  /* Signup and login form */
-  .signup, .login {
-    margin-top: 15rem;
+ /* Input fields */
+ .fields {
+    padding-top: 20rem;
   }
 
   /* Input fields */
   .input-size {
-    width: 380px;
+    width: 400px;
   }
 
   .members-page {
-    max-width: 800px;
+    max-width: 1024px;
     width: 80vw;
   }
 
