--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -27,13 +27,13 @@
           <p class="info-labels">Key: <span class="info">{{dataValues.songkey}}</span></p>
         </div>
         {{!-- Chords --}}
-        <div class="chords-box">
-          <p class="chords">{{dataValues.chords}}</p>
+        <div class="">
+          <p class="chords">{{{dataValues.chords}}}</p>
         </div>
       </div>
       {{!-- Lyrics --}}
       <div class="lyrics-box">
-        <p class="lyrics">{{dataValues.lyrics}}</p>
+        <p class="lyrics">{{{dataValues.lyrics}}}</p>
       </div>
   </main>
 </div>
