Revert "Bp eslinting"

--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -1,3 +1,4 @@
+<link href="/stylesheets/style.css" rel="stylesheet">
 {{!-- Generic styling for all pages --}}
 <div class="full-page">
     {{!-- Header box --}}
