--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <link href="/stylesheets/style.css" rel="stylesheet">
+    <link href="stylesheets/style.css" rel="stylesheet">
     
     {{!-- Script element sourcing TinyMCE --}}
     <script type="text/javascript" src="/js/tinymce/tinymce.min.js"></script>
@@ -32,7 +32,8 @@
       menu: {
         SongBirdie: { title: "SongBirdie", items: "code visualised | searchreplace | emoticons"},
       },
-      menubar: "SongBirdie file edit view insert format tools help"
+      menubar: "SongBirdie file edit view insert format tools help",
+      content_css: "css/content.css"
     });
     </script>
   </head>
