Reverting to earlier code base. Trying to resolve sequelize error.

--- a/views/createSong.handlebars
+++ b/views/createSong.handlebars
@@ -1,3 +1,5 @@
+
+<link href="/stylesheets/style.css" rel="stylesheet">
 {{!-- Generic styling for all pages --}}
 <div class="full-page">
     {{!-- Header box --}}
@@ -57,13 +59,13 @@
             </div>
             <div class="chords-box">
                 <label for="chords"></label><br>
-                <textarea id="chords" class="create-chords tinymce" rows="25" cols="50" name="chordsname" placeholder="Chords: 
+                <textarea id="chords" class="create-chords" rows="6" ccols="50" name="chordsname" placeholder="Chords: 
                 A, Bm, C#m, D, E, F#m, and G#dim"></textarea><br><br>
             </div>
 
             <div class="lyrics-box">
                 <label for="lyrics"></label><br>
-                <textarea id="lyrics" class="create-lyrics tinymce" rows="25" cols="50" name="lyricsname" placeholder="Lyrics: 
+                <textarea id="lyrics" class="create-lyrics" rows="25" cols="50" name="lyricsname" placeholder="Lyrics: 
             If you really want some hot water,
             I can help you find it.
             Oh Oh Ah yeah
