--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,10 +18,10 @@
     <link href="/stylesheets/style.css" rel="stylesheet">
     
     {{!-- Script element sourcing TinyMCE --}}
-    <script type="text/javascript" src="/js/tinymce/tinymce.min.js"></script>
+    {{!-- <script type="text/javascript" src="/js/tinymce/tinymce.min.js"></script> --}}
     
     {{!-- Initialize the editor --}}
-    <script type="text/javascript">
+    {{!-- <script type="text/javascript">
     tinymce.init({
       selector:".tinymce",
       plugins: [
@@ -34,7 +34,7 @@
       },
       menubar: "SongBirdie file edit view insert format tools help"
     });
-    </script>
+    </script> --}}
   </head>
 
 	<body>
