Added an extra set of {} around dataValues.chords and dataValues.lyrics in the updateSong and song page.

--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -26,12 +26,12 @@
         </div>
         {{!-- Chords --}}
         <div class="chords-box">
-          <p class="chords">{{dataValues.chords}}</p>
+          <p class="chords">{{{dataValues.chords}}}</p>
         </div>
       </div>
       {{!-- Lyrics --}}
       <div class="lyrics-box">
-        <p class="lyrics">{{dataValues.lyrics}}</p>
+        <p class="lyrics">{{{dataValues.lyrics}}}</p>
       </div>
   </main>
 </div>
