--- a/views/updateSong.handlebars
+++ b/views/updateSong.handlebars
@@ -57,12 +57,12 @@
             </div>
             <div class="chords-box">
                 <label for="chords"></label><br>
-                <textarea id="chords" class="create-chords tinymce" rows="6" cols="50" name="chordsname">{{dataValues.chords}}</textarea><br><br>
+                <textarea id="chords" class="create-chords tinymce" rows="6" cols="50" name="chordsname">{{{dataValues.chords}}}</textarea><br><br>
             </div>
 
             <div class="lyrics-box">
                 <label for="lyrics"></label><br>
-                <textarea id="lyrics" class="create-lyrics tinymce" rows="25" cols="50"  name="lyricsname">{{dataValues.lyrics}}</textarea><br><br>
+                <textarea id="lyrics" class="create-lyrics tinymce" rows="25" cols="50"  name="lyricsname">{{{dataValues.lyrics}}}</textarea><br><br>
             </div>
         </form>
     </main>
