Updated tinymce editor.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
         "autoresize emoticons help image media preview print spellchecker"
       ],
       toolbar: "undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | " +
-      "outdent indent | link image | preview print media | spellchecker | forecolor backcolor emoticons | help",
+      "outdent indent | link image media | spellchecker | forecolor backcolor",
       menu: {
         SongBirdie: { title: "SongBirdie", items: "code visualised | searchreplace | emoticons"},
       },
